<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:layout_margin="4dp">
        <RelativeLayout
            android:id="@+id/main_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/floare"
                android:scaleType="fitXY"
                android:contentDescription="@string/image_detail" />
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:maxLines="2"
                android:background="#99141414"
                android:textAllCaps="true"/>
            <TextView
                android:id="@+id/description"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="4dp"
                android:layout_below="@+id/thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:maxLines="5"
                android:textSize="12sp"
                android:layout_marginStart="4dp" />
            <TextView
                android:layout_above="@+id/description"
                android:layout_marginLeft="4dp"
                android:paddingRight="4dp"
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:background="#CCff0000"
                android:layout_marginStart="4dp"
                android:paddingEnd="4dp"
                tools:ignore="RtlSymmetry"
                android:textAllCaps="true"/>
            <TextView
                android:id="@+id/date"
                android:layout_above="@id/description"
                android:paddingLeft="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/category"
                android:text="@string/date"
                android:background="@color/colorAccent"
                android:textColor="#FFFFFF"
                android:paddingStart="2dp"
                tools:ignore="RtlSymmetry"
                android:layout_toEndOf="@id/category"
                android:maxLength="10"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
